# NetCDFInterpolator

./: .gitignore  CMakeLists.txt
inc/: NetCDFData.hh  util.hh
src/: main.cc  util.cc
